package behavioral.command.dinner;

public class Chef {
}
