package behavioral.command.dinner;

public interface IOrder {
    void oder();
}
