package behavioral.command.dinner;

import java.util.List;

public class Waitress {
    List<IOrder> orders;
    Chef chef = new Chef();

    public void orderUp(){

    }
}
